Fix minimap position (close #6167) Flexbox panes and info panels to prevent overlap (close #4733)

--- a/css/60_photos.css
+++ b/css/60_photos.css
@@ -1,7 +1,7 @@
 /* photo viewer div */
 #photoviewer {
     position: absolute;
-    bottom: 40px;
+    bottom: 10px;
     left: 10px;
     width: 330px;
     height: 250px;
